--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Flappy Bird</title>
-    <link rel="stylesheet" href="components/components/css/estilo.css">
+    <link rel="stylesheet" href="components/css/estilo.css">
     <link rel="stylesheet" href="components/css/flappy.css">
 </head>
 
